Bug 163485 - System Monitor version 4 - cannot configure toolbar
Summary: System Monitor version 4 - cannot configure toolbar
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-07 22:00 UTC by Mike Cohler
Modified: 2009-01-19 09:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Cohler 2008-06-07 22:00:05 UTC
Version:           System Monitor version 4 in kdebase-4.0.4-2.fc9.i386 (using KDE 4.0.4)
Installed from:    Fedora RPMs
OS:                Linux

1. In System Monitor go to Settings->Configure Toolbars
2. Select an available action from the left list and move it into current actions
3. Click OK
4. New icon does not appear when System Monitor restarted.
  
Actual results: Change not implemented

Expected results:Change should be implemented
Comment 1 Dario Andres 2008-08-16 19:41:03 UTC
Version 4 Using KDE 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)) (KDEmod) in ArchLinux i686:
I can't reproduce this bug. The icon appears after closing and reopening KSysguard. Can you still reproduce this bug with a recente KDE version (4.1 or 4.0.5)
Comment 2 MikeC 2008-08-17 12:44:05 UTC
I have not tested this for some time but when KDE4.1 is released to updates in Fedora 9 I will test again and report back.
Comment 3 Dario Andres 2008-12-20 04:17:25 UTC
@Mike : Any news on this ?
Comment 4 Mike Cohler 2008-12-20 16:26:40 UTC
Sorry about not following up - I am in the throes of doing a load of installs to F10 now, and I will try to check this out in the next week or two in F10 with full updates, and then report back. 

Also I guess it is not too long before 4.2 is released and the more important test will be for 4.2?

I hope the additional delay won't cause too huge a problem.
Comment 5 John Tapsell 2009-01-19 09:34:24 UTC
SVN commit 913379 by johnflux:

Make sure that we create all the QActions before restoring the toolbar

BUG:163485


 M  +4 -7      ksysguard.cc  
 M  +0 -1      ksysguard.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=913379