Make sure that we create all the QActions before restoring the toolbar

BUG:163485

svn path=/trunk/KDE/kdebase/workspace/; revision=913379